--- a/style1.css
+++ b/style1.css
@@ -108,13 +108,12 @@ header{
 } 
 footer{
     font-family: fangsong;
-    height: 32px;
-    margin: 447px 0px;
+    height: 24px;
+    margin-top: 26.75rem ;
     padding: 7px 0px;
     text-align: center;
     background-color: black;
 }
-
 
 
 
